--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 	var input = document.querySelector('#check');
 
 	var checkForce = new CheckForce({
+		element : input,
 		minimumChars: 8
 	});
 
 	input.addEventListener('keyup', function(event) {
-		value = event.target.value;
-		checkForce.runPassword(value);
-		//console.log(checkForce);
+		checkForce.runPassword(event.target.value);
 	});
 
 	</script>
