--- a/examples/example-with-bootstrap.html
+++ b/examples/example-with-bootstrap.html
@@ -37,16 +37,13 @@
                 <a href="#">Create account</a> or <a href="#">reset password</a>
               </div>
             </form>
-            <div class="form-links">
-              <a href="#">www.website.com</a>
-            </div>
           </section>
         </div>
         <div class="col-md-4"></div>
       </div>
     </div> <!-- /container -->
 
-    <script src="../../../src/checkforce.js"></script>
+    <script src="../dist/checkforce.min.js"></script>
     <script>
     var render = document.querySelector('.pwstrength_viewport_progress');
     CheckForce('#password',{BootstrapTheme:true}).checkPassword(function(response){
