changed in index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 });</pre></div>
 
 <h2>
-<a id="setup" class="anchor" href="#setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Basic Examples</h2>
+<a id="setup" class="anchor" href="#setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Basic Example</h2>
 
 <section class="login-form text-center">
             <form method="post" class="form-signin" action="#" role="login">
