--- a/index.html
+++ b/index.html
@@ -1,105 +1,105 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Checkforce.js by dejaneves</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/basic-example.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap/css/bootstrap.css" media="screen">
-  </head>
-  <body>
-    <section class="page-header">
-      <h1 class="project-name">Checkforce.js</h1>
-      <h2 class="project-tagline">A library that helps to perform tasks to test strength of passwords</h2>
-      <a href="https://github.com/dejaneves/checkforce.js" class="btn">View on GitHub</a>
-      <a href="https://github.com/dejaneves/checkforce.js/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/dejaneves/checkforce.js/tarball/master" class="btn">Download .tar.gz</a>
-    </section>
+<head>
+  <meta charset="UTF-8">
+  <title>Checkforce.js by dejaneves</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="stylesheets/basic-example.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap/css/bootstrap.css" media="screen">
+</head>
+<body>
+  <section class="page-header">
+    <h1 class="project-name">Checkforce.js</h1>
+    <h2 class="project-tagline">A library that helps to perform tasks to test strength of passwords</h2>
+    <a href="https://github.com/dejaneves/checkforce.js" class="btn">View on GitHub</a>
+    <a href="https://github.com/dejaneves/checkforce.js/zipball/master" class="btn">Download .zip</a>
+    <a href="https://github.com/dejaneves/checkforce.js/tarball/master" class="btn">Download .tar.gz</a>
+  </section>
 
-    <section class="main-content">
-      <h1>
-<a id="checkforcejs" class="anchor" href="#checkforcejs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>checkforce.js</h1>
+  <section class="main-content">
+    <h1>
+      <a id="checkforcejs" class="anchor" href="#checkforcejs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>checkforce.js</h1>
 
-<p>Checkforce.js is a lib that helps to perform tasks to test strength of passwords.</p>
+      <p>Checkforce.js is a lib that helps to perform tasks to test strength of passwords.</p>
 
-<h2>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
+      <h2>
+        <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
 
-<h3>
-<a id="bower" class="anchor" href="#bower" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bower</h3>
+        <h3>
+          <a id="bower" class="anchor" href="#bower" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bower</h3>
 
-<pre><code>bower install checkforce --save
-</code></pre>
+          <pre><code>bower install checkforce --save
+          </code></pre>
 
-<h3>
-<a id="npm" class="anchor" href="#npm" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NPM</h3>
+          <h3>
+            <a id="npm" class="anchor" href="#npm" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NPM</h3>
 
-<pre><code>npm install checkforce.js --save
-</code></pre>
+            <pre><code>npm install checkforce.js --save
+            </code></pre>
 
-<h2>
-<a id="setup" class="anchor" href="#setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Setup</h2>
+            <h2>
+              <a id="setup" class="anchor" href="#setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Setup</h2>
 
-<h3>
-<a id="using-the-npm" class="anchor" href="#using-the-npm" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using the npm</h3>
+              <h3>
+                <a id="using-the-npm" class="anchor" href="#using-the-npm" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using the npm</h3>
 
-<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> CheckForce <span class="pl-k">=</span> <span class="pl-c1">require</span>(<span class="pl-s"><span class="pl-pds">'</span>./dist/CheckForce<span class="pl-pds">'</span></span>);
+                <div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> CheckForce <span class="pl-k">=</span> <span class="pl-c1">require</span>(<span class="pl-s"><span class="pl-pds">'</span>checkforce.js<span class="pl-pds">'</span></span>);
 
-<span class="pl-k">var</span> response <span class="pl-k">=</span> <span class="pl-en">CheckForce</span>(<span class="pl-c1">null</span>,{
-                minimumChars<span class="pl-k">:</span><span class="pl-c1">8</span>,
-                maximumChars<span class="pl-k">:</span><span class="pl-c1">12</span>
-               }).<span class="pl-en">checkPasswordNode</span>(<span class="pl-s"><span class="pl-pds">'</span>password<span class="pl-pds">'</span></span>);</pre></div>
+                  <span class="pl-k">var</span> response <span class="pl-k">=</span> <span class="pl-en">CheckForce</span>(<span class="pl-c1">null</span>,{
+                    minimumChars<span class="pl-k">:</span><span class="pl-c1">8</span>,
+                    maximumChars<span class="pl-k">:</span><span class="pl-c1">12</span>
+                  }).<span class="pl-en">checkPasswordNode</span>(<span class="pl-s"><span class="pl-pds">'</span>password<span class="pl-pds">'</span></span>);</pre></div>
 
-<h3>
-<a id="using-the-browser" class="anchor" href="#using-the-browser" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using the browser</h3>
+                  <h3>
+                    <a id="using-the-browser" class="anchor" href="#using-the-browser" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using the browser</h3>
 
-<p>First, include the script located on the <code>dist</code> folder.</p>
+                    <p>First, include the script located on the <code>dist</code> folder.</p>
 
-<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">script</span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">"</span>dist/checkforce.min.js<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;</pre></div>
+                    <div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">script</span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">"</span>dist/checkforce.min.js<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;</pre></div>
 
-<div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">body</span>&gt;
-  &lt;<span class="pl-ent">input</span> <span class="pl-e">type</span>=<span class="pl-s"><span class="pl-pds">"</span>text<span class="pl-pds">"</span></span> <span class="pl-e">id</span>=<span class="pl-s"><span class="pl-pds">"</span>check<span class="pl-pds">"</span></span>&gt;
-  &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>viewport<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">div</span>&gt;
-&lt;/<span class="pl-ent">body</span>&gt;</pre></div>
+                    <div class="highlight highlight-text-html-basic"><pre>&lt;<span class="pl-ent">body</span>&gt;
+                      &lt;<span class="pl-ent">input</span> <span class="pl-e">type</span>=<span class="pl-s"><span class="pl-pds">"</span>text<span class="pl-pds">"</span></span> <span class="pl-e">id</span>=<span class="pl-s"><span class="pl-pds">"</span>check<span class="pl-pds">"</span></span>&gt;
+                      &lt;<span class="pl-ent">div</span> <span class="pl-e">class</span>=<span class="pl-s"><span class="pl-pds">"</span>viewport<span class="pl-pds">"</span></span>&gt;&lt;/<span class="pl-ent">div</span>&gt;
+                      &lt;/<span class="pl-ent">body</span>&gt;</pre></div>
 
-<div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> render <span class="pl-k">=</span> <span class="pl-c1">document</span>.<span class="pl-c1">querySelector</span>(<span class="pl-s"><span class="pl-pds">'</span>.viewport<span class="pl-pds">'</span></span>);
-<span class="pl-en">CheckForce</span>(<span class="pl-s"><span class="pl-pds">'</span>#check<span class="pl-pds">'</span></span>).<span class="pl-en">checkPassword</span>(<span class="pl-k">function</span>(<span class="pl-smi">response</span>){
-  <span class="pl-smi">render</span>.<span class="pl-smi">innerHTML</span> <span class="pl-k">=</span> <span class="pl-smi">response</span>.<span class="pl-c1">content</span>;
-});</pre></div>
+                      <div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> render <span class="pl-k">=</span> <span class="pl-c1">document</span>.<span class="pl-c1">querySelector</span>(<span class="pl-s"><span class="pl-pds">'</span>.viewport<span class="pl-pds">'</span></span>);
+                        <span class="pl-en">CheckForce</span>(<span class="pl-s"><span class="pl-pds">'</span>#check<span class="pl-pds">'</span></span>).<span class="pl-en">checkPassword</span>(<span class="pl-k">function</span>(<span class="pl-smi">response</span>){
+                          <span class="pl-smi">render</span>.<span class="pl-smi">innerHTML</span> <span class="pl-k">=</span> <span class="pl-smi">response</span>.<span class="pl-c1">content</span>;
+                        });</pre></div>
 
-<h2>
-<a id="setup" class="anchor" href="#setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Basic Example</h2>
+                        <h2>
+                          <a id="setup" class="anchor" href="#setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Basic Example</h2>
 
-<section class="login-form text-center">
-            <form method="post" class="form-signin" action="#" role="login">
-              <div class="text-center"> <h3><strong>Check</strong>Force.js</h3></div>
-              <input type="text" name="firstName" placeholder="First name" required class="form-control input-lg" style="width:100%">
-              <input type="text" name="lastName" placeholder="Last name" required class="form-control input-lg" style="width:100%">
-              <input type="email" name="email" placeholder="Email" required class="form-control input-lg" style="width:100%">
-              <input type="password" class="form-control input-lg" id="password" placeholder="Password" required="" style="width:100%"/>
-              <div class="pwstrength_viewport_progress text-center"></div>
-            </form>
-          </section>
-<script src="dist/checkforce.min.js"></script>
-<script>
-  var render = document.querySelector('.pwstrength_viewport_progress');
-  CheckForce('#password',{BootstrapTheme:true}).checkPassword(function(response){
-    render.innerHTML = response.content;
-  });
-</script>
+                          <section class="login-form text-center">
+                            <form method="post" class="form-signin" action="#" role="login">
+                              <div class="text-center"> <h3><strong>Check</strong>Force.js</h3></div>
+                              <input type="text" name="firstName" placeholder="First name" required class="form-control input-lg" style="width:100%">
+                              <input type="text" name="lastName" placeholder="Last name" required class="form-control input-lg" style="width:100%">
+                              <input type="email" name="email" placeholder="Email" required class="form-control input-lg" style="width:100%">
+                              <input type="password" class="form-control input-lg" id="password" placeholder="Password" required="" style="width:100%"/>
+                              <div class="pwstrength_viewport_progress text-center"></div>
+                            </form>
+                          </section>
+                          <script src="dist/checkforce.min.js"></script>
+                          <script>
+                            var render = document.querySelector('.pwstrength_viewport_progress');
+                            CheckForce('#password',{BootstrapTheme:true}).checkPassword(function(response){
+                              render.innerHTML = response.content;
+                            });
+                          </script>
 
-      <footer class="site-footer">
-        <span class="site-footer-owner" style="text-align:center">
-        Created by
-        <a href="http://jaimeneves.com.br">Jaime Neves</a> and maintained by <a href="https://github.com/dejaneves">dejaneves</a>.</span>
-      </footer>
+                          <footer class="site-footer">
+                            <span class="site-footer-owner" style="text-align:center">
+                              Created by
+                              <a href="http://jaimeneves.com.br">Jaime Neves</a> and maintained by <a href="https://github.com/dejaneves">dejaneves</a>.</span>
+                            </footer>
 
-    </section>
+                          </section>
 
 
-  </body>
-</html>
+                        </body>
+                        </html>
