in progress es15

--- a/examples/example-with-bootstrap.html
+++ b/examples/example-with-bootstrap.html
@@ -26,7 +26,7 @@
         <div class="col-md-4">
           <section class="login-form">
             <form method="post" class="form-signin" action="#" role="login">
-              <div class="text-center"> <h3><strong>Check</strong>force.js</h3></div>
+              <div class="text-center"> <h3><strong>Check</strong>Force.js</h3></div>
               <input type="text" name="firstName" placeholder="First name" required class="form-control input-lg">
               <input type="text" name="lastName" placeholder="Last name" required class="form-control input-lg">
               <input type="email" name="email" placeholder="Email" required class="form-control input-lg">
