--- a/examples/basic-demo/basic-demo.html
+++ b/examples/basic-demo/basic-demo.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Example with Bootstrap</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="../style.css">
     <style>
       .pwstrength_viewport_progress{
         padding-top: 3px;
+      }
+      .text-center{
+        text-align: center;
       }
     </style>
   </head>
@@ -18,36 +21,36 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <h1 class="text-center">Example with Bootstrap</h1>
+          <h1 class="text-center">Basic Example</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4">
-          <section class="login-form">
+          <section class="login-form text-center">
             <form method="post" class="form-signin" action="#" role="login">
               <div class="text-center"> <h3><strong>Check</strong>Force.js</h3></div>
               <input type="text" name="firstName" placeholder="First name" required class="form-control input-lg">
               <input type="text" name="lastName" placeholder="Last name" required class="form-control input-lg">
               <input type="email" name="email" placeholder="Email" required class="form-control input-lg">
               <input type="password" class="form-control input-lg" id="password" placeholder="Password" required="" />
-              <div class="pwstrength_viewport_progress"></div>
+              <div class="pwstrength_viewport_progress text-center"></div>
               <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Sign in</button>
-              <div>
-                <a href="#">Create account</a> or <a href="#">reset password</a>
-              </div>
             </form>
+            <div class="form-links">
+              <a href="#">www.website.com</a>
+            </div>
           </section>
         </div>
         <div class="col-md-4"></div>
       </div>
     </div> <!-- /container -->
 
-    <script src="../dist/checkforce.min.js"></script>
+    <script src="../../dist/checkforce.min.js"></script>
     <script>
     var render = document.querySelector('.pwstrength_viewport_progress');
-    CheckForce('#password',{BootstrapTheme:true}).checkPassword(function(response){
-      render.innerHTML = response.content;
+    CheckForce('#password').checkPassword(function(response){
+      render.innerHTML = '<strong>'+response.content+'</strong>';
   	});
     </script>
 
