changing index id

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 &lt;/<span class="pl-ent">body</span>&gt;</pre></div>
 
 <div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> render <span class="pl-k">=</span> <span class="pl-c1">document</span>.<span class="pl-c1">querySelector</span>(<span class="pl-s"><span class="pl-pds">'</span>.viewport<span class="pl-pds">'</span></span>);
-<span class="pl-en">CheckForce</span>(<span class="pl-s"><span class="pl-pds">'</span>#password<span class="pl-pds">'</span></span>,{BootstrapTheme<span class="pl-k">:</span><span class="pl-c1">true</span>}).<span class="pl-en">checkPassword</span>(<span class="pl-k">function</span>(<span class="pl-smi">response</span>){
+<span class="pl-en">CheckForce</span>(<span class="pl-s"><span class="pl-pds">'</span>#check<span class="pl-pds">'</span></span>,{BootstrapTheme<span class="pl-k">:</span><span class="pl-c1">true</span>}).<span class="pl-en">checkPassword</span>(<span class="pl-k">function</span>(<span class="pl-smi">response</span>){
   <span class="pl-smi">render</span>.<span class="pl-smi">innerHTML</span> <span class="pl-k">=</span> <span class="pl-smi">response</span>.<span class="pl-c1">content</span>;
 });</pre></div>
 
@@ -102,7 +102,7 @@
 &lt;/<span class="pl-ent">body</span>&gt;</pre></div>
 
 <div class="highlight highlight-source-js"><pre><span class="pl-k">var</span> render <span class="pl-k">=</span> <span class="pl-c1">document</span>.<span class="pl-c1">querySelector</span>(<span class="pl-s"><span class="pl-pds">'</span>.viewport<span class="pl-pds">'</span></span>);
-<span class="pl-en">CheckForce</span>(<span class="pl-s"><span class="pl-pds">'</span>#password<span class="pl-pds">'</span></span>,{MaterializeTheme<span class="pl-k">:</span><span class="pl-c1">true</span>}).<span class="pl-en">checkPassword</span>(<span class="pl-k">function</span>(<span class="pl-smi">response</span>){
+<span class="pl-en">CheckForce</span>(<span class="pl-s"><span class="pl-pds">'</span>#check<span class="pl-pds">'</span></span>,{MaterializeTheme<span class="pl-k">:</span><span class="pl-c1">true</span>}).<span class="pl-en">checkPassword</span>(<span class="pl-k">function</span>(<span class="pl-smi">response</span>){
   <span class="pl-smi">render</span>.<span class="pl-smi">innerHTML</span> <span class="pl-k">=</span> <span class="pl-smi">response</span>.<span class="pl-c1">content</span>;
 });</pre></div>
 
