justifying form with less code

--- a/examples/bootstrap/bootstrap-en.html
+++ b/examples/bootstrap/bootstrap-en.html
@@ -21,8 +21,7 @@
           <h1 class="text-center">Example with Bootstrap</h1>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4"></div>
+      <div class="row justify-content-center">
         <div class="col-md-4">
           <section class="login-form">
             <form method="post" class="form-signin" action="#" role="login">
@@ -39,7 +38,6 @@
             </form>
           </section>
         </div>
-        <div class="col-md-4"></div>
       </div>
     </div> <!-- /container -->
 
