--- a/examples/bootstrap/bootstrap-pt-br.html
+++ b/examples/bootstrap/bootstrap-pt-br.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Example with Bootstrap</title>
+    <title>Exemplo com Bootstrap</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <h1 class="text-center">Example with Bootstrap</h1>
+          <h1 class="text-center">Exemplo com Bootstrap</h1>
         </div>
       </div>
       <div class="row justify-content-center">
@@ -26,14 +26,14 @@
           <section class="login-form">
             <form method="post" class="form-signin" action="#" role="login">
               <div class="text-center"> <h3><strong>Check</strong>Force.js</h3></div>
-              <input type="text" name="firstName" placeholder="First name" required class="form-control input-lg">
-              <input type="text" name="lastName" placeholder="Last name" required class="form-control input-lg">
+              <input type="text" name="firstName" placeholder="Nome" required class="form-control input-lg">
+              <input type="text" name="lastName" placeholder="Sobrenome" required class="form-control input-lg">
               <input type="email" name="email" placeholder="Email" required class="form-control input-lg">
-              <input type="password" class="form-control input-lg" id="password" placeholder="Password" required="" />
+              <input type="password" class="form-control input-lg" id="password" placeholder="Senha" required="" />
               <div class="pwstrength_viewport_progress"></div>
-              <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Sign in</button>
+              <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Entrar</button>
               <div>
-                <a href="#">Create account</a> or <a href="#">reset password</a>
+                <a href="#">Criar conta</a> ou <a href="#">Recuperar senha</a>
               </div>
             </form>
           </section>
