--- a/examples/bootstrap/bootstrap-pt-br.html
+++ b/examples/bootstrap/bootstrap-pt-br.html
@@ -24,18 +24,33 @@
       <div class="row justify-content-center">
         <div class="col-md-4">
           <section class="login-form">
-            <form method="post" class="form-signin" action="#" role="login">
-              <div class="text-center"> <h3><strong>Check</strong>Force.js</h3></div>
-              <input type="text" name="firstName" placeholder="Nome" required class="form-control input-lg">
-              <input type="text" name="lastName" placeholder="Sobrenome" required class="form-control input-lg">
-              <input type="email" name="email" placeholder="Email" required class="form-control input-lg">
-              <input type="password" class="form-control input-lg" id="password" placeholder="Senha" required="" />
-              <div class="pwstrength_viewport_progress"></div>
-              <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Entrar</button>
-              <div>
-                <a href="#">Criar conta</a> ou <a href="#">Recuperar senha</a>
+            <div class="card">
+              <div class="card-body">
+                <div class="text-center">
+                  <h3 class="card-title"><strong>Check</strong>Force.js</h3>
+                </div>
+                <form method="post" class="form-signin" action="#" role="login">
+                  <div class="form-group">
+                    <input type="text" name="firstName" placeholder="Nome" required class="form-control form-control-lg">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" name="lastName" placeholder="Sobrenome" required class="form-control form-control-lg">
+                  </div>
+                  <div class="form-group">
+                    <input type="email" name="email" placeholder="Email" required class="form-control form-control-lg">
+                  </div>
+                  <div class="form-group">
+                    <input type="password" class="form-control form-control-lg" id="password" placeholder="Senha" required="" />
+                  </div>
+                  <div class="pwstrength_viewport_progress"></div>
+                  <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Entrar</button>
+
+                  <div>
+                    <a href="#">Criar conta</a> ou <a href="#">Recuperar senha</a>
+                  </div>
+                </form>
               </div>
-            </form>
+            </div>
           </section>
         </div>
       </div>
