movendo o arquivo de estilo primer para outro diretório

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="author" content="Jaime Neves">
   
   <link rel="icon" href="../assets/images/favicon.png" type="image/png">
-  <link rel="stylesheet" href="./node_modules/@primer/css/dist/primer.css"> 
+  <link rel="stylesheet" href="./assets/vendor/@primer/css/dist/primer.css">
   <link rel="stylesheet" href="./node_modules/highlight.js/styles/github.css">
   <link rel="stylesheet" href="./assets/css/base.css"  media="screen">
 
